# Ripen

./: .gitignore  CMakeLists.txt  README.md
Src/: CMakeLists.txt  Ripen.cpp  Ripen.h
build_files/cmake_scripts/: functions.cmake  prepdef.cmake
source/: CMakeLists.txt
source/EDK/: CMakeLists.txt
source/IDEPlugins/: CMakeLists.txt
source/Ripen/: CMakeLists.txt  Ripen.cpp
source/Ripen/CLI/: CLICommandParser.cpp  CommandParser.h
tests/: CMakeLists.txt
